--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,40 @@
 amqp==2.5.2
+appdirs==1.4.3
 asgiref==3.2.3
+attrs==19.3.0
 billiard==3.6.1.0
+cached-property==1.5.1
 celery==4.4.0
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+defusedxml==0.6.0
 Django==3.0.2
+django-cors-headers==3.2.1
 django-tables2==2.2.1
+djangorestframework==3.11.0
 et-xmlfile==1.0.1
+gevent==20.5.0
+greenlet==0.4.15
+idna==2.9
+isodate==0.6.0
 jdcal==1.4.1
 kombu==4.6.7
 ldap3==2.6.1
+lxml==4.5.0
 openpyxl==3.0.3
 pathtools==0.1.2
 psycopg2==2.8.4
 pyasn1==0.4.8
+pycparser==2.20
 pytz==2019.3
+requests==2.23.0
+requests-toolbelt==0.9.1
+six==1.14.0
 sqlparse==0.3.0
 tablib==1.0.0
 tzlocal==2.0.0
+urllib3==1.25.9
 vine==1.3.0
 watchdog==0.10.2
+zeep==3.4.0
